--- a/exercicios-html-css/assets/styles/hyperlinks.css
+++ b/exercicios-html-css/assets/styles/hyperlinks.css
@@ -1,13 +1,11 @@
-p{
+span{
     text-decoration: underline;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 a{
+    text-decoration: none;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
 }
 
-.no-decoration{
-    text-decoration: none;
-}
